from branch hw2

--- a/cd1.html
+++ b/cd1.html
@@ -12,14 +12,14 @@
 </head>
 <body>
  <h1> Chong Qing House</h1> 
-  <h2> My Call</h2> 
+   <h2>Crazy</h2>
  <audio controls autoplay id="cd">
-  <source src="Alarab_Sami_Call-My.mp3" type="audio/ogg"> 
+  <source src="Alarab_Sami_Crazy.mp4" type="audio/ogg"> 
 </audio>
 <div class="p">
-<p> <span>Name:</span> My Call</p>
+<p> <span>Name:</span> Crazyl</p>
 <p> <span>ٍٍSinger name:</span> Samy Yosef</p> 
-<p> <span>ٍٍRelease year:</span> 2018</p> 
+<p> <span>ٍٍRelease year:</span> 2018</p>
 </div>   
 </body>
-</html>
+<
