--- a/cd3.html
+++ b/cd3.html
@@ -15,5 +15,11 @@
   <h2>Eight8</h2> 
  <audio controls autoplay id="cd">
   <source src="Alarab_Sami_Eight-8.mp4" type="audio/ogg"> 
-</audio>  
+</audio>
+<div class="p">
+<p> <span>Name:</span> eight</p>
+<p> <span>ٍٍSinger name:</span> Samy Yosef</p> 
+<p> <span>ٍٍRelease year:</span> 2018</p>
+</div>    
 </body>
+</html>
