--- a/cd.html
+++ b/cd.html
@@ -16,8 +16,10 @@
  <audio controls autoplay id="cd">
   <source src="Alarab_Sami_Call-My.mp3" type="audio/ogg"> 
 </audio>
+<div class="p">
 <p> <span>Name:</span> My Call</p>
 <p> <span>ٍٍSinger name:</span> Samy Yosef</p> 
-<p> <span>ٍٍRelease year:</span> 2018</p>    
+<p> <span>ٍٍRelease year:</span> 2018</p> 
+</div>   
 </body>
 </html>
